refactor: remove dead internal Operate V1 endpoint leftovers